--- a/dash.ipynb
+++ b/dash.ipynb
@@ -229,7 +229,7 @@
     "    fig.update_layout(\n",
     "        width=2000,  # 設置圖表寬度\n",
     "        height=600,  # 設置圖表高度\n",
-    "        title=\"Main Line Chart\",\n",
+    "        title=\"Data Visualization\",\n",
     "        xaxis_title=\"DATE\",\n",
     "        yaxis_title=\"VALUE\",\n",
     "        template=\"plotly_white\",\n",
